--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -1,9 +1,13 @@
 <h1>Index</h1>
 <hr/>
 <?php
-echo 'Chegamos ao IndexController e dispararemos a action index';
-echo '<br />';
-foreach($this->view->dados as $indice => $valor) {
-	echo $valor.'<br />';
-}
+	//echo 'Chegamos ao IndexController e dispararemos a action index';
+	//echo '<br />';
+	echo '<pre>';
+	print_r($this->view->dados);
+	echo '</pre>';
+	foreach($this->view->dados as $indice => $produto) {
+		echo $produto['id'].' - '.$produto['descricao'].' - '.$produto['preco'];
+		echo'<br />';
+	}
 ?>
