--- a/App/Views/index/sobreNos.phtml
+++ b/App/Views/index/sobreNos.phtml
@@ -1,9 +1,8 @@
 <h1>Sobre Nós</h1>
 <hr/>
-<?php
-echo 'Chegamos ao IndexController e dispararemos a action sobreNos';
-echo '<br />';
-foreach($this->view->dados as $indice => $valor) {
-	echo $valor.'<br />';
-}
-?>
+<?php foreach($this->view->dados as $indice => $info) { ?>
+	<h1> <?=$info['titulo'] ?> </h1>
+	<br/>
+	<h5> <?=$info['descricao'] ?> </h5>
+	<hr/>
+<?php } ?>
